# mthud

./: .gitignore  CMakeLists.txt  CMakeSettings.json  hud_layout_controls.json  vcpkg.json
src/: app.hpp  aruco_tracker.cpp  aruco_tracker.hpp  hud_renderer.cpp  hud_renderer.hpp  main.cpp  sensor_xsens.cpp
src/old/: aruco_tracker.hpp  calibration.json  camera.yml  config.hpp  hud_renderer.hpp  main.cpp  sensor_xsens.cpp
src/old.2/: aruco_tracker.hpp  calibration.yaml  config.cpp  hud_renderer.cpp  main.cpp  sensor.hpp
src/tools/: calibrate_aruco.cpp
